# tonic-otel-example

./: Cargo.toml  README.md
docker/: docker-compose.yml  otel-config.yaml  prometheus.yml
src/: client.rs  server.rs
src/telemetry/: manager.rs  mod.rs  resource.rs
src/telemetry/log/: layer.rs
src/telemetry/metric/: middleware.rs  provider.rs
src/telemetry/trace/: middleware.rs  mod.rs  provider.rs
