[package]
name = "tonic_helloworld"
version = "0.1.0"
edition = "2024"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
tonic = "*"
prost = "0.14"
tonic-prost = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "registry"] }

opentelemetry =  "0.31"
tracing-opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry-appender-tracing = { version = "0.31", features = ["experimental_use_tracing_span_context"] }

opentelemetry-semantic-conventions = { version = "0.31.0", features = [
    "semconv_experimental",
] }

[build-dependencies]
tonic-prost-build = "*"
