[package]
name = "tonic_helloworld"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
http = "1.0"
tonic = "0.12.3"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "registry",
] }

opentelemetry = "0.26"
tracing-opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.26", features = [
    "grpc-tonic",
    "http",
    "metrics",
] }
opentelemetry-http = "0.26"
opentelemetry-stdout = "0.26"

opentelemetry-appender-tracing = { version = "0.26" }

opentelemetry-semantic-conventions = { version = "0.26", features = [
    "semconv_experimental",
] }

[build-dependencies]
tonic-build = "0.12"
